# conference-talk-grace-works-classifier

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  batch_manager.py  classifier.py  classifier_production.py  clean_data.py  conference_talk_scores.csv  coverage.xml  deduplicate_talks.py  env.example  find_similar_speakers.py  generate_report.py  label_speakers_from_filenames.py  models.py  mypy.ini  pyproject.toml  requirements-streamlit.txt  requirements.txt  streamlit_app_typed.py  test_openai_api.py  todo.md  token_counter.py
.github/workflows/: ci.yml
archive/: README.md
archive/development_artifacts/: .coverage  coverage.xml  interactive.ipynb
archive/original_versions/: classifier.py  classifier_optimized.py  classifier_refactored.py  streamlit_app.py  todo.md
code_review/: README.md  classifier_review.md  documentation_review.md  recommendations.md  streamlit_review.md  todo.md
docs/: API_REFERENCE.md  USER_GUIDE.md
pages/: 1_Word_Clouds.py  2_Speaker_Explorer.py
processors/: classifier_processor.py  csv_manager.py  file_processor.py
templates/: classify_prompt.jinja
tests/: conftest.py
tests/integration/: test_classifier_integration.py
tests/unit/: test_classifier_processor.py  test_csv_manager.py  test_exceptions.py  test_file_processor.py  test_models.py
utils/: exceptions.py  logging_config.py
